--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,7 @@
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: pnpm
+
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
